--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,19 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+wgpu = "0.20"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ["console"] }
+web-sys = { version = "0.3.69", features = [
+  "Window",
+  "Navigator",
+  "HtmlCanvasElement",
+  "CanvasRenderingContext2d",
+  "Document",
+  "console"
+] }
+console_error_panic_hook = "0.1"
+js-sys = "0.3"
+wasm-bindgen-futures = "0.4.50"
 
 [dev-dependencies]
 wasm-pack = "0.10"
