move to modular structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ web-sys = { version = "0.3.69", features = [
 console_error_panic_hook = "0.1"
 js-sys = "0.3"
 wasm-bindgen-futures = "0.4.50"
+gloo = "0.11.0"
+gloo-render = "0.2.0"
 
 [dev-dependencies]
 wasm-pack = "0.10"
